fix: optimize attendance records finalizer